# choochoo_json

./: .clang-format  .gitignore  CMakeLists.txt  README.md  debug.sh  debug_windows.sh
.zed/: debug.json  tasks.json
examples/: basic_usage.cpp  error_handling.cpp  iteration.cpp  iterator_usage.cpp  nested_access.cpp  streaming_usage.cpp
include/choochoo/: json.hpp  lexer.hpp  parser.hpp  token.hpp  value.hpp
scripts/: unified_homebrew_debug.sh
src/: lexer.cpp  main.cpp  parser.cpp  value.cpp
tests/: test_iterator.cpp  test_parser.cpp  test_streaming.cpp
